--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "lib": "lib",
     "test": "test"
   },
+  "engines": {
+    "node": "10.10.0",
+    "npm": "6.4.1"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "postinstall": "webpack",
@@ -33,11 +37,14 @@
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.5",
     "react-router": "^4.1.2",
-    "react-router-dom": "^4.1.2",
+    "react-router-dom": "^4.3.1",
     "redux": "^3.7.2",
-    "redux-logger": "^3.0.6",
+    "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.2.0",
     "webpack": "^4.20.2",
     "webpack-cli": "^3.1.2"
+  },
+  "devDependencies": {
+    "redux-logger": "^3.0.6"
   }
 }
